Update version to 0.4.2

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "program": "playstvrecovery/cli.py",
             "console": "integratedTerminal",
             "justMyCode": true,
-            "args": ["--output-path=./Downloads", "--user=MrNicola"]
+            "args": ["--output-path=./Downloads", "--user=marcusberg"]
         }
     ]
 }
